# RentikuSearch

./: .gitignore  Dockerfile  Makefile  Postgresql.Dockerfile  RentikuSearch.Dockerfile  alembic.ini  config.py  console.py  docker-compose.yml  manage.py  pyproject.toml  run_services.sh  setup_db_dev.sql  setup_db_test.sql
RentikuSearch/: .env_dev  config.py  dependancies.py
RentikuSearch/api/v1/: app.py
RentikuSearch/api/v1/views/: __init__.py  index.py  property.py  user.py
RentikuSearch/models/: __init__.py  base_model.py  crud.py  database.py  models.py  schemas.py
RentikuSearch/web_fastapi/: app.py
RentikuSearch/web_fastapi/static/images/properties/: property1.avif
RentikuSearch/web_fastapi/static/scripts/: index.js
RentikuSearch/web_fastapi/static/styles/: about.css  login.css  signup.css  styles.css
RentikuSearch/web_fastapi/templates/: about.html  base.html  footer.html  header.html  index.html  login.html  property.html  signup.html
RentikuSearch/web_fastapi/views/: about.py  index.py  login.py  property.py  signup.py
RentikuSearch/web_flask/: __init__.py
alembic/: env.py
alembic/versions/: 35a92abc4c40_update_rename_password_hash_column_to_.py  67ebc2345908_initial_revision.py  9a0a9a028d04_create_tables.py  b83d1c292444_update_default_values.py  bf84a906a218_add_property_columns.py
tests/: __init__.py  conftest.py  models.py  test_models.py
tests/api/: test_dependancies.py
tests/api/v1/views/: test_index.py  test_property.py  test_user.py
tests/models/: test_crud.py  test_models.py
utils/: db.json  insert_dummy_dev_data.py  property.json  setup_db.sh  setup_db_dev.sql  users.json
