[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[project]
name = "RentikuSearch"
description = "Seamless search for dream property"
authors = [
    {name = "Anderson John Njahi", email = "johnjahi55@gmail.com"},
]
# dynamic = ["version"]
version = '0.0.1'

requires-python = "==3.10.*"
license = {text = "MIT"}
classifiers = [
    "Framework :: fastapi",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "cmd2>=2.4.3",
    "fastapi[all]>=0.110.0",
    "Jinja2>=3.1.3",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "SQLAlchemy>=2.0.28",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.2.1",
    "uvicorn>=0.28.0",
    "alembic>=1.13.1",
    "passlib==1.7.4",
    "python-jose==3.3.0"
]

[project.optional-dependencies]
dev = [
    "autoflake>=2.3.0",
    "black>=24.2.0",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "pytest>=8.0.2",
    "faker>=24.2.0",
]


# [tool.setuptools_scm]
